# tom_basics

./: .gitignore  README.md  analysis_options.yaml
tom_analyzer_shared/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml  tom_project.yaml
tom_basics/: CHANGELOG.md  README.md  pubspec.yaml  tom_build_state.json  tom_project.yaml
tom_basics_console/: README.md  pubspec.yaml  tom_build_state.json  tom_project.yaml
tom_basics_network/: CHANGELOG.md  README.md  pubspec.yaml  tom_build_state.json  tom_project.yaml
tom_basics_samples/: README.md  analysis_options.yaml  pubspec.yaml  run_all_examples.dart
tom_build_base/: .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml  test_results.json  tom_build_state.json  tom_project.yaml
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_flit/: pyproject.toml
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_flit/src/: __init__.py
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_hatch/: pyproject.toml
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_hatch/src/: __init__.py
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_pdm/: pyproject.toml
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_pdm/src/: __init__.py
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_pip/: pyproject.toml
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_pip/src/: __init__.py
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_setuptools/: pyproject.toml
tom_build_base/test_fixtures/zom_workspaces/zom_analyzer_test/zom_python_setuptools/src/: __init__.py
tom_build_kit/: CHANGELOG.md  README.md  bootstrap_binaries.ps1  bootstrap_binaries.sh  pubspec.yaml  tom_build_state.json
tom_chattools/: CHANGELOG.md  README.md  pubspec.yaml  tom_build_state.json  tom_project.yaml
tom_crypto/: README.md  pubspec.yaml  tom_build_state.json  tom_project.yaml
tom_markdown_merge/: CHANGELOG.md  README.md  pubspec.yaml
tom_package_scanner/: CHANGELOG.md  README.md  pubspec.yaml
tom_tools/: README.md  pubspec.yaml  tom_build_state.json  (+1 more)
(+313 files in other folders)
