[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "zom-python-pdm"
version = "0.1.0"
description = "Test project for workspace analyzer PDM detection"
requires-python = ">=3.10"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=7.0.0"]
