[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zom-python-setuptools"
version = "0.1.0"
description = "Test project for workspace analyzer setuptools detection"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["zom_python_setuptools"]

[tool.setuptools.package-dir]
"" = "src"
